2003-03-27  John Levon  <levon@movementarian.org>

	* QLyXKeySym.C: remove debug stuff from startup hot path

2003-03-26  Edwin Leuven  <e.leuven@uva.nl>

	* bulletstring.[Ch]: unused; remove
	
2003-03-26  Angus Leeming  <leeming@lyx.org>

	* Dialogs.C:
	* Dialogs2.C:
	* Dialogs3.C:
	* Dialogs_impl.h:
	move the contents of Dialogs.C and Dialogs_impl.h into Dialogs2.C.
	move Dialog3.C to Dialogs.C.

	* Makefile.am: remove Dialogs_impl.h, Dialog3.C.

2003-03-26  Angus Leeming  <leeming@lyx.org>

	* Dialogs.C:
	* Dialogs2.C:
	* Dialogs_impl.h: remove the thesaurus dialog.

	* Dialogs3.C: add it here.

	* QThesaurus.[Ch]: changes to use the new Dialog-based scheme.

2003-03-25  Angus Leeming  <leeming@lyx.org>

	* Dialogs.C:
	* Dialogs2.C:
	* Dialogs_impl.h: remove the log, showfile and vclog dialogs.

	* Dialogs3.C: add these dialogs.

	* QLog.[Ch]:
	* QShowFile.[Ch]:
	* QVCLog.[Ch]: changes to use the new Dialog-based scheme.

2003-03-23  John Levon  <levon@movementarian.org>

	* lyx_gui.C: remove unused variables

2003-03-22  John Levon  <levon@movementarian.org>

	* qscreen.C: remove "internal" parameter, unused

2003-03-21  John Levon  <levon@movementarian.org>

	* QDocument.C: fix swapping of TOC and secnum depth

2003-03-15  John Levon  <levon@movementarian.org>

	* QMathDialog.C: "Sans serif" not "San serif"

2003-03-15  John Levon  <levon@movementarian.org>

	* ui/QMathDialogBase.ui: fix english in a tooltip

2003-03-15  John Levon  <levon@movementarian.org>

	* ui/QRefDialogBase.ui: s/Goto/Go to reference/

2003-03-12  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* QParagraph.C (apply): do not reset vfill spacing to 'none' when
	there is no explicit length given (off by one typo)

2003-03-13  Angus Leeming  <leeming@lyx.org>

	* Dialogs.C:
	* Dialogs2.C:
	* Dialogs_impl.h: remove paragraph dialog.

	* Dialogs3.C: add paragraph dialog.

	* QParagraph.[Ch]: changes to use the new Dialog-based scheme.

2003-03-12  John Levon  <levon@movementarian.org>
