@@ -13,8 +13,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>388</width>
-            <height>326</height>
+            <width>431</width>
+            <height>371</height>
         </rect>
     </property>
     <property stdset="1">
@@ -518,7 +518,7 @@
                         </property>
                         <property stdset="1">
                             <name>title</name>
-                            <string>Label width</string>
+                            <string>Label Width</string>
                         </property>
                         <hbox>
                             <property stdset="1">
@@ -537,7 +537,7 @@
                                 </property>
                                 <property stdset="1">
                                     <name>text</name>
-                                    <string>Lon&amp;gest label</string>
+                                    <string>Lo&amp;ngest label</string>
                                 </property>
                                 <property>
                                     <name>buddy</name>
