@@ -1,5 +1,9 @@
 2003-03-27  John Levon  <levon@movementarian.org>
 
+	* ui/QParagraphDialogBase.ui: fix dupe accelerator / group label
+
+2003-03-27  John Levon  <levon@movementarian.org>
+
 	* QLyXKeySym.C: remove debug stuff from startup hot path
 
 2003-03-26  Edwin Leuven  <e.leuven@uva.nl>
